--- a/projects/liz-crowdfunding-frontend/src/styles/App.css
+++ b/projects/liz-crowdfunding-frontend/src/styles/App.css
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-color: #38b2ac;
+  background-color: #000;
 }
 
 .hero-content {
